<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/about_btn_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical"
        android:background="?attr/selectableItemBackgroundGeneral">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_version"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/about_tv_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="14sp"
            android:singleLine="true"
            tools:text="0.0.0-alpha.0-build-0" />

    </LinearLayout>

    <View style="@style/AppWidget.DeepLine" />

    <LinearLayout
        android:id="@+id/about_btn_open_source_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical"
        android:background="?attr/selectableItemBackgroundGeneral">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/open_source_url"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/open_source_url_content"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="14sp"
            android:singleLine="true" />

    </LinearLayout>

    <View style="@style/AppWidget.DeepLine" />

    <LinearLayout
        android:id="@+id/about_btn_about_power"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical"
        android:background="?attr/selectableItemBackgroundGeneral">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="捐赠开发者"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="你的支持是我开发的动力"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="14sp"
            android:singleLine="true" />

    </LinearLayout>

    <View style="@style/AppWidget.DeepLine" />



    <View style="@style/AppWidget.ShadowGap" />

    <LinearLayout
        android:id="@+id/about_btn_open_in_app_store"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical"
        android:background="?attr/selectableItemBackgroundGeneral">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/open_in_app_store"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/open_in_app_store_content"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="14sp"
            android:singleLine="true" />

    </LinearLayout>

    <View style="@style/AppWidget.DeepLine" />

    <LinearLayout
        android:id="@+id/about_btn_advice_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical"
        android:background="?attr/selectableItemBackgroundGeneral">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/advice_feedback"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/advice_feedback_content"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="14sp"
            android:singleLine="true" />

    </LinearLayout>

    <View style="@style/AppWidget.ShadowGap" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:padding="8dp"
        android:text="@string/about_copyright"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="12sp"
        android:gravity="center" />

</LinearLayout>
