<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:fitsSystemWindows="true"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/setting_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="@dimen/app_bar_elevation"
        app:navigationIcon="@mipmap/ic_arrow_back_white_24dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/setting"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/widgetBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/cust_set"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"/>

            <RelativeLayout
                android:id="@+id/setting_btn_lockSmart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundGeneral"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/setting_switch_lockSmart"
                    android:layout_toStartOf="@+id/setting_switch_lockSmart"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lockSmart"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="16sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/lockSmart_summary"
                        android:textColor="?android:attr/textColorSecondary"
                        android:textSize="14sp"/>

                </LinearLayout>

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/setting_switch_lockSmart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:clickable="false"/>

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/setting_btn_systemApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundGeneral"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/setting_switch_systemApp"
                    android:layout_toStartOf="@+id/setting_switch_systemApp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/systemApp"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="16sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/systemApp_summary"
                        android:textColor="?android:attr/textColorSecondary"
                        android:textSize="14sp"/>

                </LinearLayout>

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/setting_switch_systemApp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:clickable="false"/>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/theme"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"/>

            <RelativeLayout
                android:id="@+id/setting_btn_theme_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundGeneral"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/setting_switch_theme_dark"
                    android:layout_toStartOf="@+id/setting_switch_theme_dark"
                    android:paddingBottom="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/theme_dark"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="16sp"/>

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/setting_switch_theme_dark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:clickable="false"/>

            </RelativeLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/commset"
                android:visibility="gone"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"/>

            <RelativeLayout
                android:visibility="gone"
                android:id="@+id/setting_btn_ad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundGeneral"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/setting_switch_ad"
                    android:layout_toStartOf="@+id/setting_switch_ad"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ad"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="16sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/ad_summy"
                        android:textColor="?android:attr/textColorSecondary"
                        android:textSize="14sp"/>

                </LinearLayout>

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/setting_switch_ad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:clickable="false"/>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/pwd"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"/>

            <RelativeLayout
                android:id="@+id/setting_btn_rePwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundGeneral"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/rePwd"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="16sp"/>


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/setting_btn_new_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundGeneral"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/new_pwd_stytle"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="16sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/new_pwd_stytle_summary"
                        android:textColor="?android:attr/textColorSecondary"
                        android:textSize="14sp"/>

                </LinearLayout>


            </RelativeLayout>

            <View style="@style/AppWidget.DeepLine"/>


            <TextView
                android:id="@+id/setting_btn_modify_topic_sign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundGeneral"
                android:padding="16dp"
                android:text="@string/pwd_tip"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp"/>

            <View style="@style/AppWidget.ItemGap"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
