<?xml version="1.0" encoding="utf-8"?>
<com.king.applock.view.ScrimInsetsScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="?attr/widgetBackground"
    android:scrollbars="none"
    app:appInsetForeground="#4000">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_bg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/nav_header_height"
            android:background="@mipmap/wallpaper">


            <LinearLayout
                android:id="@+id/main_nav_layout_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/main_nav_img_avatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_launcher"/>

                <TextView
                    android:id="@+id/main_nav_tv_login_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/app_name"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/main_nav_tv_running"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="加锁服务运行中"
                    android:textColor="@color/button_stroke_solid_pressed"
                    android:textSize="15sp"/>

            </LinearLayout>


            <ImageView
                android:id="@+id/main_nav_btn_theme_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/main_nav_layout_info"
                android:layout_margin="16dp"
                android:adjustViewBounds="true"
                android:background="@drawable/button_transparent_image"
                android:padding="16dp"
                android:scaleType="center"
                android:src="@mipmap/ic_brightness_3_white_24dp"/>

        </RelativeLayout>

        <View style="@style/AppWidget.NavigationItemDeepLineGap"
              android:layout_marginTop="8dp"/>


        <TextView android:id="@+id/main_nav_btn_theme"
                  style="@style/AppWidget.NavigationItem"
                  android:drawableLeft="@mipmap/ic_notifications_grey600_24dp"
                  android:text="@string/theme"/>


        <TextView android:id="@+id/main_nav_btn_setting"
                  style="@style/AppWidget.NavigationItem"
                  android:drawableLeft="@mipmap/ic_settings_grey600_24dp"
                  android:text="@string/setting"/>

        <TextView android:id="@+id/main_nav_btn_about"
                  style="@style/AppWidget.NavigationItem"
                  android:drawableLeft="@mipmap/ic_info_grey600_24dp"
                  android:text="@string/about"/>

        <View style="@style/AppWidget.NavigationItemDeepLineGap"/>
    </LinearLayout>
</com.king.applock.view.ScrimInsetsScrollView>